meta description 추가

--- a/views/mypage/likeList.ejs
+++ b/views/mypage/likeList.ejs
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="로그인 후 자신이 좋아요한 식당들을 조회하고 추가 및 삭제 할 수 있는 페이지입니다.">
         <title>내 좋아요 목록</title>
         <%- include('../include/head') %>
         <link rel="stylesheet" href="/static/css/likeList.css" />
@@ -86,7 +87,6 @@
                             emptyHeart.id = `filledHeart${index}`;
                             emptyHeart.classList.remove("fa-regular");
                             emptyHeart.classList.add("fa-solid");
-
                             alert(response.data.message);
                         })
                         .catch((err) => {
