--- a/views/mypage/reviewDetail.ejs
+++ b/views/mypage/reviewDetail.ejs
@@ -4,6 +4,10 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="description"
+            content="자신의 리뷰 목록 중 하나를 선택하여 리뷰 상세정보를 확인하고 수정 및 삭제할 수 있는 페이지입니다."
+        />
         <title>내 리뷰 목록</title>
         <%- include('../include/head') %>
         <link rel="stylesheet" href="/static/css/reviewDetail.css" />
