--- a/views/mypage/reviewList.ejs
+++ b/views/mypage/reviewList.ejs
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="로그인 후 자신이 작성한 리뷰들을 볼 수 있는 페이지입니다."
         <title>내 리뷰 목록</title>
         <%- include('../include/head') %>
         <link rel="stylesheet" href="/static/css/reviewList.css" />
