--- a/views/404.ejs
+++ b/views/404.ejs
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="잘못된 URL입력시 이동하는 페이지입니다." />
         <title>404 Error</title>
     </head>
     <body>
