--- a/views/mypage/profile.ejs
+++ b/views/mypage/profile.ejs
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="로그인 후 자신의 회원정보를 확인 및 수정할 수 있는 페이지입니다."
         <title>내 정보</title>
         <%- include('../include/head') %>
         <link rel="stylesheet" href="/static/css/profile.css" />
