feat / index description

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,11 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- Meta Description -->
+        <meta
+            name="description"
+            content="홈화면 및 메인페이지 / 로그인 및 회원가입 / 검색 및 카테고리 /"
+        />
         <title>창동역 맛집 모음</title>
         <link rel="stylesheet" href="/static/css/index.css" />
         <script src="https://kit.fontawesome.com/9ff27f4d50.js" crossorigin="anonymous"></script>
