--- a/views/user/idCheckForm.ejs
+++ b/views/user/idCheckForm.ejs
@@ -3,83 +3,11 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="/static/css/idCheckForm.css">
+        <meta name="description" content="아이디 중복 체크 가능한 화면. 중복 여부에 따라 버튼이 생성됨. ">
         <title>아이디 중복체크</title>
         <%- include('../include/head') %>
     </head>
-
-    <style>
-        body {
-            margin-top: 20px;
-            margin-left: 25px;
-            margin-right: 25px;
-            background-color: whitesmoke;
-        }
-
-        .logoImg {
-            display: flex;
-            align-items: center;
-        }
-
-        .logoImg p {
-            font-size: 18px;
-            font-weight: bold;
-            color: "gray";
-        }
-
-        .logoImg img {
-            width: 80px;
-            height: 80px;
-            margin-right: 10px;
-        }
-
-        .inputId {
-            display: flex;
-            align-items: center;
-            margin-left: 20px;
-        }
-
-        #idCk {
-            margin-left: 15px;
-            border: none;
-            padding: 7px 7px;
-            border-radius: 5px;
-            background-color: #ffc064;
-            font-weight: bold;
-            cursor: pointer;
-        }
-
-        .chkBtn {
-            display: flex;
-            align-items: center;
-            margin-left: 20px;
-        }
-
-        .chkBtn #cancleBtn {
-            margin-right: 25px;
-            border: none;
-            padding: 7px 7px;
-            border-radius: 5px;
-            background-color: #ffc064;
-            font-weight: bold;
-            cursor: pointer;
-        }
-
-        .chkBtn #useBtn {
-            border: none;
-            padding: 7px 7px;
-            border-radius: 5px;
-            background-color: #ffc064;
-            font-weight: bold;
-            cursor: pointer;
-            visibility: hidden;
-        }
-        #msg {
-            margin-left: 20px;
-            color: #c47500;
-            font-size: 12px;
-        }
-   
-    </style>
 
     <body onload="pValue()">
         <div id="wrap">
@@ -137,7 +65,7 @@
                             alert("사용할 수 없는 아이디입니다.");
                             document.getElementById("cancleBtn").style.visibility = "visible";
                             document.getElementById("useBtn").style.visibility = "hidden";
-                            document.getElementById("msg").innerHTML = "";
+                            document.getElementById("msg").innerHTML = "사용 불가능한 아이디입니다.";
                         }
                     })
                     .catch((error) => {
