--- a/views/user/searchId.ejs
+++ b/views/user/searchId.ejs
@@ -3,61 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/css/searchId.css">
+    <meta name="description" content="아이디 찾기 화면. 가입 이메일을 입력해서 존재하면 아이디 확인 가능하게 했음. ">
     <title>아이디 찾기</title>
     <%- include('../include/head') %>
 </head>
-<style>
-     body {
-            margin-top: 20px;
-            margin-left: 25px;
-            margin-right: 25px;
-            background-color: whitesmoke;
-        }
 
-        .logoImg {
-            display: flex;
-            align-items: center;
-        }
-
-        .logoImg p {
-            font-size: 18px;
-            font-weight: bold;
-            color: "gray";
-        }
-
-        .logoImg img {
-            width: 80px;
-            height: 80px;
-            margin-right: 10px;
-        }
-
-        #msg {
-            font-family: "Gowun Dodum", sans-serif;
-            color: #c47500;
-            font-size: 12px;
-        }
-
-        #emailCk {
-            border: none;
-            padding: 7px 7px;
-            border-radius: 5px;
-            background-color: #ffc064;
-            font-weight: bold;
-            cursor: pointer;
-            margin-left: 20px;
-        }
-
-        #email {
-            width: 250px;
-        }
-
-        #resultId {
-            font-family: "Gowun Dodum", sans-serif;
-            font-weight: bolder;
-            visibility: hidden;
-            font-size: 18px;
-        }
-</style>
 <body>
         <div class="logoImg">
         <img src="/static/images/CMM-removebg.png" alt="cmm logo" />
@@ -101,9 +52,6 @@
                             console.log("이메일 일치");
                             document.getElementById("msg").innerHTML = "이메일 확인에 성공했습니다.";
                             document.getElementById("resultId").style.visibility = "visible";
-                            // const resultId = response.data.id;
-                            // const resultElement = document.getElementById(resultId);
-                            // resultElement.style.color = "blue";
                             document.getElementById("resultId").innerHTML = "아이디값은 " + response.data.id + "입니다.";
 
                         } else {
