--- a/views/user/searchPw.ejs
+++ b/views/user/searchPw.ejs
@@ -3,64 +3,12 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="/static/css/searchPw.css">
+        <meta name="description" content="비밀번호 찾기 화면. 아이디 입력 시에 기존 비밀번호를 바꾸게 했음.">
         <title>비밀번호 찾기</title>
         <%- include('../include/head') %>
     </head>
-    <style>
-        body {
-            margin-top: 20px;
-            margin-left: 25px;
-            margin-right: 25px;
-            background-color: whitesmoke;
-        }
 
-        .logoImg {
-            display: flex;
-            align-items: center;
-        }
-
-        .logoImg p {
-            font-size: 18px;
-            font-weight: bold;
-            color: "gray";
-        }
-
-        .logoImg img {
-            width: 80px;
-            height: 80px;
-            margin-right: 10px;
-        }
-
-        #msg {
-            font-family: "Gowun Dodum", sans-serif;
-            color: #c47500;
-            font-size: 12px;
-        }
-
-        #idCheck {
-            border: none;
-            padding: 7px 7px;
-            border-radius: 5px;
-            background-color: #ffc064;
-            font-weight: bold;
-            cursor: pointer;
-            margin-left: 20px;
-        }
-
-        .newPw {
-            visibility: hidden;
-        }
-
-        #pwCheck {
-            border: none;
-            padding: 7px 7px;
-            border-radius: 5px;
-            background-color: #ffc064;
-            font-weight: bold;
-            cursor: pointer;
-            margin-left: 20px;
-        }
-    </style>
     <body>
         <div class="logoImg">
             <img src="/static/images/CMM-removebg.png" alt="cmm logo" />
