--- a/views/admin/adminAddRest.ejs
+++ b/views/admin/adminAddRest.ejs
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <%-include('../include/head.ejs')%>
+        <meta name="description" content="창동역 맛집 웹사이트의 식당 등록 페이지입니다." />
         <link rel="stylesheet" href="/static/css/adminAddRest.css" />
-        <title>관리 페이지</title>
+        <title>식당 관리 | 식당 등록</title>
+        <%-include('../include/head.ejs')%>
     </head>
     <body>
         <%- include('./sidebar.ejs') %>
