--- a/views/suggestions/suggestionList.ejs
+++ b/views/suggestions/suggestionList.ejs
@@ -3,8 +3,9 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="창동역 맛집 모음 웹사이트의 건의사항 게시글 목록입니다.">
         <link rel="stylesheet" href="/static/css/sugList.css">
-        <title>건의 | 글 목록</title>
+        <title>건의사항 | 글 목록</title>
         <%- include('../include/head.ejs') %>
     </head>
     <body>
