--- a/views/suggestions/suggestionWrite.ejs
+++ b/views/suggestions/suggestionWrite.ejs
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="창동역 맛집 모음 웹사이트의 건의사항 게시판의 게시글 작성 페이지입니다.">
         <title>건의 | 글쓰기</title>
         <script src="https://cdn.jsdelivr.net/npm/suneditor@2.45.1/dist/suneditor.min.js"></script>
         <link
