--- a/views/admin/adminDeleteUser.ejs
+++ b/views/admin/adminDeleteUser.ejs
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <%-include('../include/head.ejs')%>
-        <title>회원 관리</title>
+        <meta name="description" content="창동역 맛집 모음 웹사이트의 회원 관리 페이지입니다.">
         <link rel="stylesheet" href="/static/css/adminUser.css">
+        <title>회원 관리</title>
+        <%-include('../include/head.ejs')%>
     </head>
     <body>
         <%- include('./sidebar.ejs') %>
