--- a/views/suggestions/suggestionPost.ejs
+++ b/views/suggestions/suggestionPost.ejs
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="창동역 맛집 모음 웹사이트의 건의사항 게시글입니다." />
         <link rel="stylesheet" href="/static/css/sugPost.css" />
         <title>건의 | <%= postInfo.title%></title>
         <%- include('../include/head') %>
